<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delela_note"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item
        android:id="@+id/update_note"
        android:title="@string/edit"
        android:icon="@drawable/edit"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/archive_note"
        android:title="@string/archive"
        android:icon="@drawable/archive"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/share_note"
        android:title="@string/share"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom|collapseActionView"
        />

</menu>